# linznetz-energy-tracker

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  app.py  codecov.yml  csv_import.py  db_init.py  docker-compose.override.yml.example  docker-compose.yml  download_vendors.py  linznetz_fetcher.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  docker-publish.yml
static/: index.html  script.js  styles.css
tests/: conftest.py  test_app.py  test_csv_import.py  test_db_init.py  test_linznetz_fetcher.py
